	explain the implementation in decision-vegan.Rnw. 

	* DESCRIPTION: vegan suggests 'parallel'. The 'parallel' package
	was released with R 2.14.0. If you need to check or use vegan with
	older R, you should set environmental variable
	_R_CHECK_FORCE_SUGGESTS_=FALSE (see, e.g., discussion
	https://stat.ethz.ch/pipermail/r-devel/2011-December/062827.html).

	* anova.ccabymargin failed if none of the terms was analysed (all
	were aliased) and no permutations were performed.  This would
	happen with, e.g.,
	
	A <- dune.env$Management
	anova(rda(dune ~  Management + A, dune.env), by = "margin")

	or in general if all marginal effects were aliased. 

	* ordistep: handle cases where the marginal effects for
	adding/dropping are completely aliased. This should avoid problems
	like that reported in
	https://stat.ethz.ch/pipermail/r-help/2012-January/300167.html

Version 2.1-8 (closed January 8, 2012)

	* betadisper: failed with an error in internal function
	betadisper() if there were empty levels. This could happen when
	'groups' was a factor with empty levels, and was reported in 
	https://stat.ethz.ch/pipermail/r-sig-ecology/2011-November/002525.html
	The behaviour is now corrected in ordimedian() which will return NA
	for empty factor levels. 

	* nestedbetasor, nestedbetajac: New functions that implement
	decomposition of Sorensen and Jaccard beta diversities into
	components of turnover and nestedness following Baselga (Global
	Ecology and Biogeography 19, 134-143; 2010). These are documented
	with nestedness indices and are ready to be used with oecosimu().

	* oecosimu: more informative text on 'alternative' hypotheses in
	the printed output. Return also the mean of simulations and show
	that in the printed output.

	* plot.cca: works with degenerate solutions where constraints are
	aliased and 'biplot' scores have zero rows. Stops with a
	comprehensible error message if a user requests non-existing
	scores (such as "bp" scores for unconstrained ordination).
	